# datafusion-index-provider

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: index_scan.rs  lib.rs  optimizer.rs  provider.rs  record_fetch.rs  types.rs
src/physical/: joins.rs  mod.rs  record_fetch.rs
src/physical/indexes/: department_index.rs  fetch.rs  index.rs  mod.rs  scan.rs
src/physical_plan/: fetcher.rs  joins.rs  mod.rs
src/physical_plan/exec/: fetch.rs  index.rs  mod.rs  sequential_union.rs
tests/: composite_pk_tests.rs  custom_provider_test.rs  index_join.rs  index_provider.rs  integration_tests.rs  join_logic.rs  one_index.rs  physical_plan.rs  two_indexes.rs
tests/common/: age_index.rs  composite_pk_age_index.rs  composite_pk_department_index.rs  composite_pk_fetcher.rs  composite_pk_provider.rs  department_index.rs  employee_provider.rs  exec.rs  indexes.rs  mod.rs  record_fetcher.rs
