[package]
name = "datafusion-index-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
datafusion = { version = "49.0.1", default-features = false }
datafusion-common = { version = "49.0.1", default-features = false }
futures = "0.3.31"
futures-util = "0.3.31"
futures-core = "0.3.31"
log = "0.4.27"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11.8"
parking_lot = "0.12.4"
